export const snapshot = {};

snapshot[`sitemap > works 1`] = `
'<?xml version="1.0" encoding="utf-8"?>
<?xml-stylesheet href="/styles.xsl" type="text/xsl"?>
<urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
  <url>
    <loc>
      https://example.com
    </loc>
  </url>
  <url>
    <loc>
      https://example.com/about
    </loc>
  </url>
  <url>
    <loc>
      https://example.com/contact
    </loc>
  </url>
</urlset>'
`;

snapshot[`sitemap > sitemap index 1`] = `
'<?xml version="1.0" encoding="utf-8"?>
<sitemapindex xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
  <sitemap>
    <loc>
      https://example.com/sitemap1.xml
    </loc>
  </sitemap>
  <sitemap>
    <loc>
      https://example.com/sitemap2.xml
    </loc>
  </sitemap>
</sitemapindex>'
`;

snapshot[`sitemap > sample works 1`] = `
'<?xml version="1.0" encoding="utf-8"?>
<urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
  <url>
    <loc>
      http://www.example.com/
    </loc>
    <lastmod>
      2005-01-01
    </lastmod>
    <changefreq>
      monthly
    </changefreq>
    <priority>
      0.8
    </priority>
  </url>
  <url>
    <loc>
      http://www.example.com/catalog?item=12&desc=vacation_hawaii
    </loc>
    <changefreq>
      weekly
    </changefreq>
  </url>
  <url>
    <loc>
      http://www.example.com/catalog?item=73&desc=vacation_new_zealand
    </loc>
    <lastmod>
      2004-12-23
    </lastmod>
    <changefreq>
      weekly
    </changefreq>
  </url>
  <url>
    <loc>
      http://www.example.com/catalog?item=74&desc=vacation_newfoundland
    </loc>
    <lastmod>
      2004-12-23
    </lastmod>
    <priority>
      0.3
    </priority>
  </url>
  <url>
    <loc>
      http://www.example.com/catalog?item=83&desc=vacation_usa
    </loc>
    <lastmod>
      2004-11-23
    </lastmod>
  </url>
</urlset>'
`;

snapshot[`sitemap > sitemap index sample works 1`] = `
'<?xml version="1.0" encoding="utf-8"?>
<sitemapindex xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
  <sitemap>
    <loc>
      http://www.example.com/sitemap1.xml.gz
    </loc>
    <lastmod>
      2004-10-01
    </lastmod>
  </sitemap>
  <sitemap>
    <loc>
      http://www.example.com/sitemap2.xml.gz
    </loc>
    <lastmod>
      2005-01-01
    </lastmod>
  </sitemap>
</sitemapindex>'
`;
